styles/mondobd/_main.scss
@import "tree";
@import "compass/css3/box-sizing";
@import "compass/css3/transition";
@import "compass/css3/filter";
@import "compass/css3/images";
@import "compass/utilities/general/clearfix";
@import "mondobd/vendor/flexslider.css";
@import "mondobd/vendor/colorbox/colorbox.css";

$background-color: rgba(255, 204, 0, 0.1);
$navbar-background: #2c2c2c;
$navbar-color: white;
$navbar-text-shadow: #aaa;
$description-background: rgba(30, 30, 30, 0.6);
$description-text-color: rgba(255, 255, 255, 1);
$main-font: 'Open Sans';
$choice-container-base-height: 434px;

body {
  font-family: $main-font;
}

#preload-content {
  display: none;
  position: absolute;
  left: -9999px;
}

.container {
  margin-top: 10px !important; // override FlexSlider's inline style
  width: 800px; // narrower to fit the project's tablets
}

.navbar ul.nav > li {
  cursor: pointer;
}

.flex-direction-nav {
  display: none;
}

.chart {
  position: relative;
  background-color: $background-color;
  
  &, & * {
    @include box-sizing(border-box);
  }
  
  ul.slides {
    li {
      opacity: 0.3;
    }
    li.flex-active-slide {
      opacity: 1;
    }
  }
  
  
  // show non-current slides for extra awesome
  .flex-viewport {
    overflow: visible !important;
  }
  
  li {
    list-style: none;
  }
}

.choice-container {
  float: left;
  width: 50%;
  padding: 1em;
  
  &.end {
    float: none !important;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
  }
  
  .item {
    position: relative;
  }
  
  .description {
    position: absolute;
    background: $description-background;
    top: 0;
    width: 100%;
    padding: 0.5em;
    color: $description-text-color;
    z-index: 10;
  }
  
  /*.image > ul {
    width: 100%;
    margin: 0;
  }*/

  img {
    width: 100%;
    left: 0;
  }
}

.repeat-choice, .no-choice {
  display: block;
  text-align: center;
  color: inherit;
  @include transition(color 1s ease-in-out);
}

li.choice-group {
  margin-top: 1em;
  margin-bottom: 1em;
  padding: 1em;
  /* when jquery.cycle is applied to both choices, height is not
     set: so we set height for the whole choice group, and this should
     be updated if the overall sizes change
  */
  height: $choice-container-base-height;
  background-color: $background-color;
  position: relative;
  
  @include clearfix;
  
  &[data-children-count="4"], &[data-children-count="3"] {
    height: 2 * $choice-container-base-height;
  }
  
  &:not(:last-child) {
    .choice-container {
      &.chosen {

      }
      
      &:not(.chosen) {
        @include filter(grayscale(90%));
        opacity: 0.5;
      }
    }
  }
  
  &[data-children-count="1"] {
    .repeat-choice {
      color: transparent;
      visibility: hidden;
    }
  }
  
  &:last-child {
    .repeat-choice {
      color: transparent;
    }
    
    .choice-container {
      float: left;
      min-height: 2em;
      padding: 1em;
    }
  }
}

.item-card {
  h1 {
  }
  
  h2 {
    font-size: 1.5em;
    line-height: inherit;
  }
  
  .definition {
    border-bottom: 1px dotted;
  }
}

/* Twitter Boostrap overrides */
.navbar-inner {
  background-color: #2c2c2c;
  /* Gradients for modern browsers, replace as you see fit */
  @include background-image(linear-gradient(top, #666666, #222222));
  
  & * {
    color: $navbar-color !important;
    text-shadow: $navbar-text-shadow !important;
  }
}

